<package format="3">
    <name>adaptive_bridge</name>
    <version>0.1.0</version>
    <description>
        Adaptive Bridge is a ROS 2 middleware-level proxy that mitigates the
        slow-subscriber backpressure coupling problem by decoupling critical
        and non-critical subscriber paths. It prevents a degraded subscriber
        (e.g. a remote visualisation tool over WiFi) from degrading the
        publisher or affecting safety-critical consumers.
    </description>
    <maintainer email="kaushalrajpuwar@gmail.com">Kaushalraj Puwar</maintainer>
    <license>Apache-2.0</license>
    <author email="kaushalrajpuwar@gmail.com">Kaushalraj Puwar</author>

    <depend>rclpy</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>

    <buildtool_depend>ament_python</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>python3-pytest</test_depend>
    
    <exec_depend>python3-yaml</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
